[project]
name = "pssapi"
version = "0.5.1"
description = "A wrapper for the Pixel Starships API."
authors = [
    { name = "The worst.", email = "theworstpss@gmail.com" },
    { name = "Solevis"}
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.11"
keywords = [
    "Pixel Starships",
    "PSS",
    "API",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pytz>=2024.1",
    "websockets>=13.0",
    "APScheduler>=3.10.4",
]

[project.urls]
Repository = "https://github.com/PSS-Tools-Development/pssapi.py"
Issues = "https://github.com/PSS-Tools-Development/pssapi.py/issues"
Changelog = "https://github.com/PSS-Tools-Development/pssapi.py/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "autoflake>=2.3.1",
    "black>=24.4.2",
    "coverage>=7.6.0",
    "flake8>=7.1.0",
    "flake8-black>=0.3.6",
    "flake8-bugbear>=24.4.26",
    "isort>=5.13.2",
    "pre-commit>=3.8.0",
    "pyment>=0.3.3",
    "pytest>=7.2.1",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.1.3",
    "pytest_httpx>=0.30.0",
    "pytest-vcr>=1.0.2",
    "vulture>=2.11",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pssapi"]

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
ignore-init-module-imports = true
recursive = true

[tool.isort]
src_paths = ["src", "tests", "showcase.py"]
profile = "black"
line_length = 200

[tool.black]
line-length = 200
target-version = ['py311']
include = '\.pyi?$'
