[flake8]
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .direnv,
extend-ignore = E203,E501,W503,B950
show-source = True
statistics = True
select = B,B9,BLK,C,E,F,W
max-complexity = 10
max-line-length = 200

[metadata]
name = pssapi
version = attr: pssapi.VERSION
description = Wrapper for the Pixel Starships API
long_description_content_type = text/markdown
url = https://github.com/PSS-Tools-Development/pssapi.py
project_urls =
    Bug Tracker = https://github.com/PSS-Tools-Development/pssapi.py/issues
    Changelog = https://github.com/PSS-Tools-Development/pssapi.py/releases
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src